# unix-recursive

./: .gitignore  ChangeLog.md  Makefile  README.md  default.nix  measure.sh  shell.nix  stack.yaml  unix-recursive.cabal
.github/workflows/: test.yml
System/Posix/: Recursive.hs
System/Posix/Recursive/: ByteString.hs  Unsafe.hs
System/Posix/Recursive/ByteString/: Unsafe.hs
app/: Main.hs
bench/: Bench.hs
nix/: default.nix  pkgs.nix  shell-cabal.nix  shell-stack.nix
src/System/Posix/: Recursive.hs
src/System/Posix/Recursive/: ByteString.hs
test/: Spec.hs  setup.sh
test/Spec/: ByteString.hs  Listing.hs
test/workdir/dir3/sub2/: broken-sym1
