cabal-version: 1.12

name:           unix-recursive
version:        0.1.0.0
homepage:
bug-reports:
author:         Marek Fajkus
maintainer:     marek.faj@gmail.com
copyright:      2021 Marek Fajkus
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/turboMaCk/unix-recursive

library
  exposed-modules:
      System.Posix.Recursive.ByteString
      System.Posix.Recursive
  other-modules:
      Paths_unix_recursive
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , unix
    , bytestring
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

executable dir-traverse-bin
  main-is: dir-traverse.hs
  hs-source-dirs:
      bin
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , dir-traverse == 0.2.3.0
  default-language: Haskell2010

executable unix-recursive-bin
  main-is: unix-recursive.hs
  other-modules:
      Paths_unix_recursive
  hs-source-dirs:
      bin
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , unix-recursive
    , utf8-string
  default-language: Haskell2010

test-suite unix-recursive-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_unix_recursive
      Spec.ByteString
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , unix-recursive
    , hspec
    , bytestring
    , unix
  default-language: Haskell2010
